<!-- Autor: Eduardo Luiz Arthur Marques - Matricula: 12296045 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lab03.MainActivity" >

    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" >

        
    </EditText>
    
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:layout_marginTop="30dp"
        android:rowCount="4" >


    <Button
            android:id="@+id/button1"
            android:text="@string/bt1"
            android:layout_gravity="bottom"
            />
    
        
        <Button
            android:id="@+id/button2"
            android:text="@string/bt2"
            android:layout_gravity="bottom"
            />
        
         <Button
            android:id="@+id/button3"
            android:text="@string/bt3"
            android:layout_gravity="left"
            />

        <Button
            android:id="@+id/button4"
            android:text="@string/btAd"
            android:layout_gravity="bottom"
          />
        
        <Button
            android:id="@+id/button5"
            android:text="@string/bt4"
            android:layout_gravity="bottom"
          />
       
       <Button
            android:id="@+id/button6"
            android:text="@string/bt5"
            android:layout_gravity="bottom"
          />
        
         <Button
            android:id="@+id/button7"
            android:text="@string/bt6"
            android:layout_gravity="left"
         />

        <Button
            android:id="@+id/button8"
            android:text="@string/btSub"
            android:layout_gravity="bottom"
          /> 
 
        <Button
            android:id="@+id/button9"
            android:text="@string/bt7"
            android:layout_gravity="bottom"
         />
        
        <Button
            android:id="@+id/button10"
            android:text="@string/bt8"
            android:layout_gravity="bottom"
         />
       
       <Button
            android:id="@+id/button11"
            android:text="@string/bt9"
            android:layout_gravity="bottom"
         />
        
         <Button
            android:id="@+id/button12"
            android:text="@string/btDiv"
            android:layout_gravity="left"
         />
        
         <Button
            android:id="@+id/button15"
            android:text="@string/bt10"
            android:layout_gravity="left"
            android:layout_row="3"
            android:layout_column="1"
         />

        <Button
            android:id="@+id/button16"
            android:text="@string/btMul"
            android:layout_gravity="bottom"
            android:layout_row="3"
            android:layout_column="3"
         /> 
 
        
        
    </GridLayout>
    
</RelativeLayout>
